# Data-Engineering-Code-Challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: export.py  load_data.py  main.py  transformations.py  udfs.py
src/crosscutting/: constants.py  logger.py  spark_singleton.py
src/data_models/: schemas.py
tests/: test_load_data.py  test_transformations.py
